<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/intro_message"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q1"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_1" />

                <RadioButton
                    android:id="@+id/answer2q1"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_2" />

                <RadioButton
                    android:id="@+id/answer3q1"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_3" />

            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q2"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_1" />

                <RadioButton
                    android:id="@+id/answer2q2"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_2" />

                <RadioButton
                    android:id="@+id/answer3q2"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q3"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3_1" />

                <RadioButton
                    android:id="@+id/answer2q3"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3_2" />

                <RadioButton
                    android:id="@+id/answer3q3"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q4"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_1" />

                <RadioButton
                    android:id="@+id/answer2q4"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_2" />

                <RadioButton
                    android:id="@+id/answer3q4"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q5"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_1" />

                <RadioButton
                    android:id="@+id/answer2q5"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_2" />

                <RadioButton
                    android:id="@+id/answer3q5"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q6"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_1" />

                <RadioButton
                    android:id="@+id/answer2q6"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_2" />

                <RadioButton
                    android:id="@+id/answer3q6"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_7" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q7"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_7_1" />

                <RadioButton
                    android:id="@+id/answer2q7"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_7_2" />

                <RadioButton
                    android:id="@+id/answer3q7"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_7_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_8" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q8"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_8_1" />

                <RadioButton
                    android:id="@+id/answer2q8"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_8_2" />

                <RadioButton
                    android:id="@+id/answer3q8"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_8_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_9" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q9"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_1" />

                <RadioButton
                    android:id="@+id/answer2q9"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_2" />

                <RadioButton
                    android:id="@+id/answer3q9"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_3" />


            </RadioGroup>


            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_10" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer1q10"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_10_1" />

                <RadioButton
                    android:id="@+id/answer2q10"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_10_2" />

                <RadioButton
                    android:id="@+id/answer3q10"
                    style="@style/RadioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_10_3" />


            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sumbit_button"
                style="@style/Buttons"
                android:layout_width="61dp"
                android:layout_height="34dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/roundbuttons"
                android:onClick="results"
                android:text="Submit" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>
